Fri Nov 03  Pablo Saratxaga <pablo@mandrakesoft.com>

	* gtk/gtkrc.zh_TW.*: moved gtkrc.zh_TW.Big5 to gtkrc.zh_TW.big5;
	the charset encodign portion MUST be in lowercase.
	* gtk/gtkrc.az: added file for Azeri language

Mon Oct 16 11:39:29 2000  Tim Janik  <timj@gtk.org>

	* configure.in: up version number to 1.2.9, interface 4, binary 9.

2000-10-13  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* configure.in: Add zh_CN.GB2312 (Chinese GB2312) to
	                ALL_LINGUAS

2000-09-30  Martin Baulig  <baulig@suse.de>

	* gtk+.pc.in, gdk.pc.in: Provide pkg-config scripts.

	* configure.in: Create *.pc scripts from the *.pc.in
	templates.
	* Makefile.am (pkgconfig_DATA): Install the *.pc
	scripts in `$(libdir)/pkgconfig'.

Thu Sep 07 20:50:49 2000  George Lebl <jirka@5z.com>

	* gtk/gtkmenu.c:  Backported Nils Barth's patch for submenu
	  navigation with Owen's fixes and suggestions.  The original
	  ChangeLog from Owen for HEAD goes as folllows:  Apply patch from
          Nils Barth and David Santiago to improve submenu
          navigation. The patch does this by creating a triangular
          region from the point where the pointer leaves the
          menu to the submenu.  While the pointer is in
          that region and a timeout has not expired, events
          that would cause the active submenu to change are
          ignored.

Sun Sep 03 00:47:08 2000  George Lebl <jirka@5z.com>

	* gtk/gtkwidget.h:  Add some documenting comments about 
	  GTK_CAN_DEFAULT, GTK_HAS_DEFAULT and GTK_RECEIVES_DEFAULT
	  just as owen said on irc.

	* gtk/gtkwindow.c (gtk_window_set_default):  Don't blindly
	  set HAS_DEFAULT.  Only set it if there isn't another window
	  holding it (a focus window which RECEIVES_DEFAULT) and only unset
	  it if the widget is not the focused window with RECEIVES_DEFAULT.
	  This fixes weird double default bugs in dialogs which has things
	  call gtk_window_set_default at times.

Fri Aug 18 17:27:46 2000  Owen Taylor  <otaylor@redhat.com>
