@@ -596,6 +596,8 @@ gtk_socket_filter_func (GdkXEvent *gdk_xevent, GdkEvent *event, gpointer data)
 	if (!socket->plug_window)
 	  {
 	    gtk_socket_add_window (socket, xcwe->window);
+	    if (!socket->plug_window)
+	      break;
 
 	    gdk_error_trap_push ();
 	    gdk_window_move_resize(socket->plug_window,
@@ -628,6 +630,9 @@ gtk_socket_filter_func (GdkXEvent *gdk_xevent, GdkEvent *event, gpointer data)
 	
 	if (!socket->plug_window)
 	  gtk_socket_add_window (socket, xcre->window);
+
+	if (!socket->plug_window)
+	  break;
 	
 	if (xcre->window == GDK_WINDOW_XWINDOW (socket->plug_window))
 	  {
@@ -708,6 +713,9 @@ gtk_socket_filter_func (GdkXEvent *gdk_xevent, GdkEvent *event, gpointer data)
       if (!socket->plug_window)
 	gtk_socket_add_window (socket, xevent->xmaprequest.window);
 	
+      if (!socket->plug_window)
+	break;
+	
       if (xevent->xmaprequest.window ==
 	  GDK_WINDOW_XWINDOW (socket->plug_window))
 	{
@@ -723,6 +731,9 @@ gtk_socket_filter_func (GdkXEvent *gdk_xevent, GdkEvent *event, gpointer data)
 	}
       break;
     case PropertyNotify:
+      if (!socket->plug_window)
+	break;
+	
       if (xevent->xproperty.window ==
 	  GDK_WINDOW_XWINDOW (socket->plug_window))
 	{
